; ModuleID = '/home/carl/AnghaBench/lede/target/linux/adm5120/files-3.18/drivers/usb/host/extr_adm5120-mem.c_td_alloc.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/adm5120/files-3.18/drivers/usb/host/extr_adm5120-mem.c_td_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.td = type { i32, i32 }
%struct.admhcd = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.td* (%struct.admhcd*, i32)* @td_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.td* @td_alloc(%struct.admhcd* %0, i32 %1) #0 {
  %3 = alloca %struct.td*, align 8
  %4 = alloca %struct.admhcd*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.td*, align 8
  store %struct.admhcd* %0, %struct.admhcd** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.admhcd*, %struct.admhcd** %4, align 8
  %9 = getelementptr inbounds %struct.admhcd, %struct.admhcd* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call %struct.td* @dma_pool_alloc(i32 %10, i32 %11, i32* %6)
  store %struct.td* %12, %struct.td** %7, align 8
  %13 = load %struct.td*, %struct.td** %7, align 8
  %14 = icmp ne %struct.td* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %2
  store %struct.td* null, %struct.td** %3, align 8
  br label %28

16:                                               ; preds = %2
  %17 = load %struct.td*, %struct.td** %7, align 8
  %18 = call i32 @memset(%struct.td* %17, i32 0, i32 8)
  %19 = load %struct.admhcd*, %struct.admhcd** %4, align 8
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @cpu_to_hc32(%struct.admhcd* %19, i32 %20)
  %22 = load %struct.td*, %struct.td** %7, align 8
  %23 = getelementptr inbounds %struct.td, %struct.td* %22, i32 0, i32 1
  store i32 %21, i32* %23, align 4
  %24 = load i32, i32* %6, align 4
  %25 = load %struct.td*, %struct.td** %7, align 8
  %26 = getelementptr inbounds %struct.td, %struct.td* %25, i32 0, i32 0
  store i32 %24, i32* %26, align 4
  %27 = load %struct.td*, %struct.td** %7, align 8
  store %struct.td* %27, %struct.td** %3, align 8
  br label %28

28:                                               ; preds = %16, %15
  %29 = load %struct.td*, %struct.td** %3, align 8
  ret %struct.td* %29
}

declare dso_local %struct.td* @dma_pool_alloc(i32, i32, i32*) #1

declare dso_local i32 @memset(%struct.td*, i32, i32) #1

declare dso_local i32 @cpu_to_hc32(%struct.admhcd*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
